--- a/goodness_of_synthesis/tex/PsyMCA25_fidelity/main.tex
+++ b/goodness_of_synthesis/tex/PsyMCA25_fidelity/main.tex
@@ -17,7 +17,7 @@
 \DeclareMathOperator{\Cov}{\mathrm{Cov}}
 \DeclareMathOperator{\JS}{D_{\mathrm{JS}}}
 
-\newcommand{\R}{\mathbb{R}}
+\renewcommand{\R}{\mathbb{R}}
 \newcommand{\indep}{\perp\!\!\!\perp}
 
 % --------------------------------------------------
@@ -162,7 +162,7 @@ NEEDS TO BE EDITED
 Limitations/caveats
 \begin{itemize}
     \item \textbf{Causal inference} All normal causality caveats still apply: When this method succeeds, the relationships between the variables are "the same" in the synthetic and original data. Identification of the causal effect in the synthetic dataset requires that the causal effect is identified in the original dataset, and any analysis 
-    \item \testbf{Reidentification of participants} Data use agreements may preclude sharing of synthetic data, which may be used to reidentify participants. 
+    \item \textbf{Reidentification of participants} Data use agreements may preclude sharing of synthetic data, which may be used to reidentify participants. 
 \end{itemize}
 }
 
