--- a/goodness_of_synthesis/ntb/process3.ipynb
+++ b/goodness_of_synthesis/ntb/process3.ipynb
@@ -1870,8 +1870,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a25daab7-9d13-4bca-afd9-1f39712d6c55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "process2.ipynb\tprocess3.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9b12d604-da0b-4227-92ec-b7b4c0d71455",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ntb\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls ../\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fe193472-bef7-4a0a-b07c-c635e85c5f58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/ishanu/ZED/Research/psymca25/ntb\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pwd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba318257-93a2-4f1d-8888-90002c9d205d",
    "metadata": {},
    "outputs": [],
    "source": []
