lsm synthdata added

--- a/goodness_of_synthesis/ntb/process2.ipynb
+++ b/goodness_of_synthesis/ntb/process2.ipynb
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 134,
    "id": "da199f27-e648-4151-bf67-75673f0f5e4f",
    "metadata": {},
    "outputs": [
@@ -1583,7 +1583,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1000/1000 [00:26<00:00, 38.07it/s]\n"
+      "100%|███████████████████████████████████████| 1000/1000 [00:25<00:00, 38.81it/s]\n"
      ]
     }
    ],
@@ -3167,8 +3167,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "22d32d0e-9359-4037-a380-5a0cc5b35be8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 1000/1000 [00:34<00:00, 29.11it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# synthetic generation\n",
+    "gensamples_big=[qsample(s,model,steps=steps,alpha=.97,baseline_prob=getbp(s)) for s in tqdm(X[:N])]\n",
+    "lsm_synthetic_df=pd.DataFrame(gensamples_big,columns=feature_names)\n",
+    "lsm_synthetic_df.to_csv('LSM_synthetic_35variables.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83e76782-9d00-406d-ab4e-d85b1f2008e4",
    "metadata": {},
    "outputs": [],
    "source": []
